@@ -1,1 +1,1 @@
-4.0.0beta3
+4.0.0beta4
