@@ -28,7 +28,7 @@
     </tr>
     <tr>
       <th>Latest Development Release</th>
-      <td><a href="v4.0.0.html">v4.0.0alpha</a></td>
+      <td><a href="v4.0.0.html">v4.0.0beta4</a></td>
     </tr>
     <tr>
       <th>Master Download Site</th>
@@ -128,7 +128,7 @@ Joris Van Damme and Lee Howard.
   </ul>
   <hr>
   <p>
-    Last updated  $Date: 2009-08-20 22:57:39 $.
+    Last updated  $Date: 2009-08-27 17:40:50 $.
   </p>
 </body>
 </html>
